--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -71,6 +71,10 @@ jobs:
           VITE_CHRISTMAS_EVENT_DONATION: "0xc84F151276b93a9c94B7642c738C9e5c4Cf6a316"
           VITE_BUD_CONTRACT: "0x78a0cea8f323ff80985c5f9d1f9de18bb9e35996"
           VITE_MARKETPLACE_CONTRACT: "?"
+          VITE_MARKETPLACE_VERIFIER_CONTRACT: "?"
+          VITE_WITHDRAW_SFL_CONTRACT: "?"
+          VITE_ALGEBRA_QUOTER_CONTRACT: "0xa15F0D7377B2A0C0c10db057f641beD21028FC89"
+          VITE_USDC_CONTRACT: "0x3c499c542cef5e3811e1192ce70d8cc03d5c3359"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_POKO_API_KEY: ${{ secrets.POKO_API_KEY }}
