--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -72,10 +72,13 @@ jobs:
           VITE_CHICKEN_FIGHT_DONATION: "0x99B4E9Dc0b20E4A8a2D5be4145C38196A80e164B"
           VITE_DAILY_REWARD_CONTRACT: "0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C"
           VITE_CHRISTMAS_EVENT_DONATION: "0xc84F151276b93a9c94B7642c738C9e5c4Cf6a316"
-
           VITE_BUD_CONTRACT: "0x5b6563e99A8FCafE125b6023D723E8d372e36E96"
           VITE_DEQUIPPER_CONTRACT: "0x1D14762E8A50E031e4Da3125c300a1D7370CBA4f"
-          VITE_MARKETPLACE_CONTRACT: "0x6B4c0eE875eD7F7597687a8EF35b56243FA63a47"
+          VITE_MARKETPLACE_CONTRACT: "0xe5fA85595aaEA6e5901efE9f088850945680398B"
+          VITE_MARKETPLACE_VERIFIER_CONTRACT: "0xeAFA2e7Ba8402B7623F87691402f0dE33e911993"
+          VITE_WITHDRAW_SFL_CONTRACT: "0x392A2D109352a5141352a6824078205B767e991A"
+          VITE_ALGEBRA_QUOTER_CONTRACT: "0xd11db1Dd39D266D4eAcfaF8dbFCB9B8B691F66AF"
+          VITE_USDC_CONTRACT: "0x41e94eb019c0762f9bfcf9fb1e58725bfb0e7582"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_POKO_API_KEY: ${{ secrets.POKO_API_KEY }}
