--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -72,7 +72,7 @@ jobs:
           VITE_BUD_CONTRACT: "0x78a0cea8f323ff80985c5f9d1f9de18bb9e35996"
           VITE_MARKETPLACE_CONTRACT: "?"
           VITE_MARKETPLACE_VERIFIER_CONTRACT: "?"
-          VITE_WITHDRAW_SFL_CONTRACT: "?"
+          VITE_WITHDRAW_SFL_CONTRACT: "0xeABd89253e081c245F7196dCA1075E6dfc93C5B5"
           VITE_ALGEBRA_QUOTER_CONTRACT: "0xa15F0D7377B2A0C0c10db057f641beD21028FC89"
           VITE_USDC_CONTRACT: "0x3c499c542cef5e3811e1192ce70d8cc03d5c3359"
 
