--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -37,7 +37,7 @@ jobs:
           VITE_NETWORK: mainnet
           VITE_ACCOUNT_MINTER_CONTRACT: "0x14142323c5b6fe70285F17ae2733cB67935d542C"
           VITE_FARM_CONTRACT: "0x2B4A66557A79263275826AD31a4cDDc2789334bD"
-          VITE_GAME_CONTRACT: "0x516DF8A8151840DA4C5e4Ba4E9A73F085e55953f"
+          VITE_GAME_CONTRACT: "0xEbCf0D4d637014dECd96A37DC9EAa5De01758cc5"
           VITE_SESSION_CONTRACT: "0x63ED5e7dF3eF84B81dEc5aC46d46A8FD86c452b4"
           VITE_AUCTION_CONTRACT: "0x2E9F8FFD0A9C0D72D843fe4c6b531561AD365BAb"
           VITE_INVENTORY_CONTRACT: "0x22d5f9B75c524Fec1D6619787e582644CD4D7422"
@@ -70,11 +70,12 @@ jobs:
           VITE_WITHDRAWAL_CONTRACT: "0xf1F7fcBE652576AFbe20385B17A59a52d23ced5A"
           VITE_CHRISTMAS_EVENT_DONATION: "0xc84F151276b93a9c94B7642c738C9e5c4Cf6a316"
           VITE_BUD_CONTRACT: "0x78a0cea8f323ff80985c5f9d1f9de18bb9e35996"
-          VITE_MARKETPLACE_CONTRACT: "?"
-          VITE_MARKETPLACE_VERIFIER_CONTRACT: "?"
+          VITE_MARKETPLACE_CONTRACT: "0x4b6475e38111680e796EA9032A5AEdC3C3DA39DB"
+          VITE_MARKETPLACE_VERIFIER_CONTRACT: "0x93F64AA3C8Fd507989Dc4581206AAE2Efce964a6"
           VITE_WITHDRAW_SFL_CONTRACT: "0x1fC4eBc1637D431E2C2Bc4bec407f022b2F3DB21"
           VITE_ALGEBRA_QUOTER_CONTRACT: "0xa15F0D7377B2A0C0c10db057f641beD21028FC89"
           VITE_USDC_CONTRACT: "0x2791bca1f2de4661ed88a30c99a7a9449aa84174"
+          VITE_FEES_CONTRACT: "0x5a9E3B09f829a5E7Fa1Af9ba112D91C1Cc93683F"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_POKO_API_KEY: ${{ secrets.POKO_API_KEY }}
