--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-draggable": "^4.4.5",
     "react-i18next": "^13.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
-    "react-router-dom": "^6.10.0",
+    "react-router": "^7.0.2",
     "react-share": "^5.1.0",
     "react-spring": "^9.7.1",
     "serialize-error": "^11.0.0",
