--- a/package.json
+++ b/package.json
@@ -70,9 +70,12 @@
     "react-draggable": "^4.4.5",
     "react-i18next": "^13.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router": "^7.0.2",
     "react-share": "^5.1.0",
     "react-spring": "^9.7.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
     "serialize-error": "^11.0.0",
     "stream-browserify": "^3.0.0",
     "string-similarity": "^4.0.4",
@@ -100,6 +103,8 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@types/react-window": "^1.8.8",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
