--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ VITE_ACCOUNT_MINTER_CONTRACT=0x891a1910fCf5Fae3e91DECE231806fae720b7743
 VITE_SESSION_CONTRACT=0x91083eE5761D5b0C286AB6bfb1E73E5895EaBe22
 VITE_GAME_CONTRACT=0x05BbC2c442A7468538e68B1F70a97C9140227b0e
 VITE_WITHDRAWAL_CONTRACT=0x95FEaC8a82cDaD65BC0187df0628686688b49586
+VITE_DEPOSIT_CONTRACT=0x05c63E157969C8a92e5E4591223705C9134F57b1
 VITE_BUD_DEPOSIT_CONTRACT=0x05c63E157969C8a92e5E4591223705C9134F57b1
 VITE_AUCTION_CONTRACT=0x4AF3425117D7D50f84aA300cc6EF72a1211f543F
 VITE_MARKETPLACE_CONTRACT=0x657c82974Beae9693757Cd549D475D7a6aa33311
