[FIX] Update buds contract in ci

--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -69,6 +69,7 @@ jobs:
           VITE_SEAL_CONTRACT: "0x000000000000000000000000000000000000dEaD"
           VITE_BUY_SFL_CONTRACT: "0x4196d162B9d4Bd3C31e64284A4E5f58c2cDb90FE"
           VITE_BUY_GEMS_CONTRACT: "0x0BF15a83889cAfcBAa19e5C44E319D96AbD0cD3E"
+          VITE_DEPOSIT_CONTRACT: "0x05c63E157969C8a92e5E4591223705C9134F57b1"
           VITE_BUD_DEPOSIT_CONTRACT: "0x05c63E157969C8a92e5E4591223705C9134F57b1"
           VITE_QUICKSWAP_ROUTER_CONTRACT: "0x000000000000000000000000000000000000dEaD"
           VITE_WMATIC_CONTRACT: "0x000000000000000000000000000000000000dEaD"
