--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "types": ["vite-plugin-pwa/react", "@khmyznikov/pwa-install"],
     "paths": {
       "features/*": ["src/features/*"],
       "assets/*": ["src/assets/*"],
@@ -23,11 +24,5 @@
       "components/*": ["src/components/*"]
     }
   },
-  "include": [
-    "./src",
-    "./metadata",
-    "./node_modules/vite-plugin-pwa/react.d.ts",
-    "./node_modules/@khmyznikov/pwa-install/index.d.ts",
-    "./src/types/page-lifecycle.d.ts"
-  ]
+  "include": ["./src", "./metadata", "./src/types/page-lifecycle.d.ts"]
 }
