--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
-    "types": ["vite-plugin-pwa/react", "@khmyznikov/pwa-install"],
     "paths": {
       "features/*": ["src/features/*"],
       "assets/*": ["src/assets/*"],
@@ -24,5 +23,11 @@
       "components/*": ["src/components/*"]
     }
   },
-  "include": ["./src", "./metadata", "./src/types/page-lifecycle.d.ts"]
+  "include": [
+    "./src",
+    "./metadata",
+    "./node_modules/vite-plugin-pwa/react.d.ts",
+    "./node_modules/@khmyznikov/pwa-install/index.d.ts",
+    "./src/types/page-lifecycle.d.ts"
+  ]
 }
