--- a/.github/workflows/pwa.yml
+++ b/.github/workflows/pwa.yml
@@ -103,7 +103,7 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./dist/ s3://www.sunflower-metaverse.com.au/pwa --delete
+        run: aws s3 sync ./dist/ s3://sunflower-metaverse.com.au/pwa --delete
 
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./dist/ s3://www.sunflower-metaverse.com.au/pwa --delete
