--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
       - name: Install Dependencies
         run: yarn install
 
@@ -34,47 +39,51 @@ jobs:
           VITE_API_URL: ${{ secrets.API_URL }}
           VITE_ROOM_URL: ${{ secrets.ROOM_URL }}
           VITE_DONATION_ADDRESS: ${{ secrets.DONATION_ADDRESS }}
-          VITE_NETWORK: mumbai
-          VITE_ACCOUNT_MINTER_CONTRACT: "0xa1bF32F6E7bcD9283Bb91Af26BDfdc5E2e954896"
-          VITE_POKO_ACCOUNT_MINTER_CONTRACT: "0xf9E8A66a4c516B46FC44560Ece7eB3f18B01c061"
-          VITE_SESSION_CONTRACT: "0x10Af5c3D3316b66f2219717C7AB3F900a9E9f706"
-          VITE_AUCTION_CONTRACT: "0x392A2D109352a5141352a6824078205B767e991A"
-          VITE_GAME_CONTRACT: "0x27A6599DD1B1257B0e0f10fE2C83716b26c48f02"
-          VITE_FARM_CONTRACT: "0xa6c6bbF5C772916bB39D13D972da9f9CE3E9f369"
-          VITE_INVENTORY_CONTRACT: "0x9b78DFb31a3fab4A23F12e4CA6D85C3fEA5E8136"
-          VITE_TOKEN_CONTRACT: "0xdD0cdB13D62aADdc6A9F19f836Aaaa32E07f4d04"
-          VITE_WITHDRAWAL_CONTRACT: "0xbf63c088c26a0aa5693fe3ad8ffc15f07b118741"
-          VITE_WISHING_WELL_CONTRACT: "0xbDBB736FC2Ce2b7aEE88e5f86888Cef7414Ad1F5"
-          VITE_PAIR_CONTRACT: "0xaE42EA9864C36820627068a11959915f817ce809"
-          VITE_TRADER_CONTRACT: "0x123d310FE94FcbA7Ca9a33A3965e2938A7Ac84B8"
+          VITE_NETWORK: amoy
+          VITE_ACCOUNT_MINTER_CONTRACT: "0x891a1910fCf5Fae3e91DECE231806fae720b7743"
+          VITE_SESSION_CONTRACT: "0x91083eE5761D5b0C286AB6bfb1E73E5895EaBe22"
+          VITE_AUCTION_CONTRACT: "0x4AF3425117D7D50f84aA300cc6EF72a1211f543F"
+          VITE_GAME_CONTRACT: "0x6EC7018cA99bd820077D16724AAD72706524B1dF"
+          VITE_FARM_CONTRACT: "0x6E625972Ca5206Ae213650CDc10fba1878540352"
+          VITE_INVENTORY_CONTRACT: "0xAF9f4013b569A69Ed43DB368598B37fE08fa3520"
+          VITE_TOKEN_CONTRACT: "0x64C865248a4ba3E9993F0c948246C0cC17E50F8F"
+          VITE_WITHDRAWAL_CONTRACT: "0x95FEaC8a82cDaD65BC0187df0628686688b49586"
+          VITE_WISHING_WELL_CONTRACT: "0x4B6176fACF562A68258980863f1188941f734248"
+          VITE_PAIR_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_TRADER_CONTRACT: "0x00733B03b6f3Ae6Ed195B369ddac47FF903f123f"
           VITE_TREASURY_ADDRESS: "0x1DB57407EE80709D4d862fe81399FBB35B8B9586"
-          VITE_BUMPKIN_DETAILS_CONTRACT: "0xAeB15F2aE9f248bf6a3606fadA02EF79f35c8bEF"
-          VITE_BUMPKIN_ITEMS_CONTRACT: "0xa163b82370DeBb82C12B735b995a332D50a02252"
-          VITE_BUMPKIN_CONTRACT: "0x48f53e506882a502b07668f6990f0e15422a539b"
-          VITE_DISCORD_REDIRECT: "https://sunflower-land.com/push/"
+          VITE_BUMPKIN_DETAILS_CONTRACT: "0xD35D367B7268fec464DBbD2a8cDFCF2fe993C688"
+          VITE_BUMPKIN_ITEMS_CONTRACT: "0x8184641F9E132Ff28077E9C1C2e36BB98106e254"
+          VITE_BUMPKIN_CONTRACT: "0x9141AAc3CF88C8545a7F7C0e51cA62BD9b5AAC4b"
+          VITE_DISCORD_REDIRECT: "https://api-dev.sunflower-land.com/oauth/discord"
           VITE_CLIENT_VERSION: ${{ steps.date.outputs.date }}
           VITE_RELEASE_VERSION: ${{ steps.get_version.outputs.VERSION }}
           VITE_RECAPTCHA_SITEKEY: "6Lfqm6MeAAAAAFS5a0vwAfTGUwnlNoHziyIlOl1s"
           VITE_CLOUDFLARE_CAPTCHA_SITEKEY: "0x4AAAAAAAAoHFfoj3YbRYSO"
-          VITE_FROG_CONTRACT: "0x52A5ddFF59E0A27a1cBA75c8045A434b7D296A6c"
-          VITE_FROG_DONATION: "0x1AFad0B5A0D532c9123A5f2F879A421413B5b6f7"
-          VITE_TADPOLE_CONTRACT: "0x2c65Dabdeb338188618bc94E2aAD0ddfFa40c1C9"
-          VITE_INCUBATOR_CONTRACT: "0xd19b1Ab87D650fc9e9c73F02F6FAe647bcC50c96"
-          VITE_WHITELIST_TOKEN_CONTRACT: "0x49c37423A304A07d9b51748aF86Fe16BA64d972E"
-          VITE_QUEST_CONTRACT: "0x97E2ab0335C2fD18a4bB870a48eB8C2dE6d94B18"
-          VITE_SEAL_CONTRACT: "0x23b1aA9382602E929722bA081E00dCdEb883482d"
-          VITE_BUY_SFL_CONTRACT: "0xe4A579BAEEB8cE727937f2AE6dca9334f0a8C1A1"
-          VITE_BUY_BLOCK_BUCKS_CONTRACT: "0xd54c8df11de29cdf279f386e2bf4986f21e0bdb7"
-          VITE_DEPOSIT_CONTRACT: "0x5228045162c5058A6b19CBC6563B16D231f432Fa"
-          VITE_BUD_DEPOSIT_CONTRACT: "0x9259ACf3264B3068091d022Bb12f495a7b194c96"
-          VITE_QUICKSWAP_ROUTER_CONTRACT: "0x0AdFd88E8Bbe16A2E94D833Ae7ebe1dbeb9906F6"
-          VITE_WMATIC_CONTRACT: "0x2D2D57e23a1F2bBD22e83Bb018D333cae7f70BBA"
+          VITE_FROG_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_FROG_DONATION: "0x000000000000000000000000000000000000dEaD"
+          VITE_TADPOLE_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_INCUBATOR_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_WHITELIST_TOKEN_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_QUEST_CONTRACT: "0xB7C85B0A62BF284168Cdb33126Fc987AeD728323"
+          VITE_SEAL_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_BUY_SFL_CONTRACT: "0x4196d162B9d4Bd3C31e64284A4E5f58c2cDb90FE"
+          VITE_BUY_GEMS_CONTRACT: "0x0BF15a83889cAfcBAa19e5C44E319D96AbD0cD3E"
+          VITE_DEPOSIT_CONTRACT: "0x05c63E157969C8a92e5E4591223705C9134F57b1"
+          VITE_BUD_DEPOSIT_CONTRACT: "0x05c63E157969C8a92e5E4591223705C9134F57b1"
+          VITE_QUICKSWAP_ROUTER_CONTRACT: "0x000000000000000000000000000000000000dEaD"
+          VITE_WMATIC_CONTRACT: "0x000000000000000000000000000000000000dEaD"
           VITE_GREEDY_GOBLIN_DONATION: "0x7bC6Fe738E5f4FdCbd034489A0320507BCA9806D"
           VITE_CHICKEN_FIGHT_DONATION: "0x99B4E9Dc0b20E4A8a2D5be4145C38196A80e164B"
-          VITE_DAILY_REWARD_CONTRACT: "0x45E4A31E994263a3025325aac63FC15E441A89F5"
-          VITE_CHRISTMAS_EVENT_DONATION: "0xE336EF65aC5532C0BfeFF52e350B22F96E784b6F"
-
-          VITE_BUD_CONTRACT: "0x8B8520e415eBb76bc1544fF1e1650c89cc58d5De"
+          VITE_DAILY_REWARD_CONTRACT: "0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C"
+          VITE_CHRISTMAS_EVENT_DONATION: "0xc84F151276b93a9c94B7642c738C9e5c4Cf6a316"
+          VITE_BUD_CONTRACT: "0x5b6563e99A8FCafE125b6023D723E8d372e36E96"
+          VITE_DEQUIPPER_CONTRACT: "0x1D14762E8A50E031e4Da3125c300a1D7370CBA4f"
+          VITE_MARKETPLACE_CONTRACT: "0x6C2f9F0F5080Aea5Dd9c17db900015B5c80F9175"
+          VITE_MARKETPLACE_VERIFIER_CONTRACT: "0x7c6eb150E182B1C2208DCD6C66677c9B22c1D68B"
+          VITE_WITHDRAW_SFL_CONTRACT: "0x7667a67eede741141A46ce21717aDCEA40fE7dc0"
+          VITE_ALGEBRA_QUOTER_CONTRACT: "0xd11db1Dd39D266D4eAcfaF8dbFCB9B8B691F66AF"
+          VITE_USDC_CONTRACT: "0x41e94eb019c0762f9bfcf9fb1e58725bfb0e7582"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_POKO_API_KEY: ${{ secrets.POKO_API_KEY }}
@@ -83,10 +92,11 @@ jobs:
           VITE_PRIVATE_IMAGE_URL: "https://sunflower-land.com/testnet-assets"
           VITE_GAME_ANALYTICS_APP_ID: ${{ secrets.GAME_ANALYTICS_APP_ID }}
           VITE_GAME_ANALYTICS_PUB_KEY: ${{ secrets.GAME_ANALYTICS_PUB_KEY }}
-          VITE_FIREBASE_VAPID_KEY: ${{ secrets.FIREBASE_VAPID_KEY }}
+          VITE_SEQUENCE_ACCESS_KEY: ${{ secrets.SEQUENCE_ACCESS_KEY }}
+          VITE_ANIMATION_URL: "https://animations-dev.sunflower-land.com"
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1.5.9
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
