Revert "Revert "[FEAT] Push Notifications (#5026)""
This reverts commit 0cb18a690cb721d44b25d1219b16b4e478737f4c.

--- a/.env.sample
+++ b/.env.sample
@@ -67,6 +67,8 @@ VITE_ANIMATION_URL=https://animations-dev.sunflower-land.com/
 
 VITE_SEQUENCE_ACCESS_KEY=<SEQUENCE_ACCESS_KEY>
 
+FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
+
 #VITE_PORTAL_URL=http://localhost:3001
 
 # VITE_PORTAL_APP=portal-example
