--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -94,6 +94,7 @@ jobs:
           VITE_GAME_ANALYTICS_PUB_KEY: ${{ secrets.GAME_ANALYTICS_PUB_KEY }}
           VITE_SEQUENCE_ACCESS_KEY: ${{ secrets.SEQUENCE_ACCESS_KEY }}
           VITE_ANIMATION_URL: "https://animations-dev.sunflower-land.com"
+          VITE_FIREBASE_VAPID_KEY: ${{ secrets.FIREBASE_VAPID_KEY }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
