[FIX] Memoize Collectible Buff Labels

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.memoize": "^4.1.2",
     "lodash.shuffle": "^4.2.0",
     "mitt": "^3.0.1",
     "mobile-device-detect": "^0.4.3",
@@ -96,6 +97,7 @@
     "@types/jest": "^27.4.0",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.memoize": "^4.1.9",
     "@types/lodash.shuffle": "^4.2.7",
     "@types/pubsub-js": "^1.8.6",
     "@types/qrcode.react": "^1.0.5",
