--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@khmyznikov/pwa-install": "^0.3.3",
     "@metamask/onboarding": "^1.0.1",
     "@react-spring/web": "^9.7.2",
+    "@sky-mavis/waypoint": "^4.1.0",
     "@tanstack/react-query": "^5.52.1",
     "@use-gesture/react": "^10.2.26",
     "@wagmi/connectors": "^5.1.7",
