[FEAT] Ronin Network Daily Chest

--- a/.env.sample
+++ b/.env.sample
@@ -25,6 +25,7 @@ VITE_TRADER_CONTRACT=0x00733B03b6f3Ae6Ed195B369ddac47FF903f123f
 VITE_BUMPKIN_DETAILS_CONTRACT=0xD35D367B7268fec464DBbD2a8cDFCF2fe993C688
 VITE_QUEST_CONTRACT=0xB7C85B0A62BF284168Cdb33126Fc987AeD728323
 VITE_DAILY_REWARD_CONTRACT=0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C
+VITE_RONIN_DAILY_REWARD_CONTRACT=0xAF9f4013b569A69Ed43DB368598B37fE08fa3520
 VITE_PRIVATE_IMAGE_URL=https://sunflower-land.com/testnet-assets
 VITE_ROOM_URL=ws://localhost:2567
 
