--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -76,6 +76,7 @@ jobs:
           VITE_GREEDY_GOBLIN_DONATION: "0x7bC6Fe738E5f4FdCbd034489A0320507BCA9806D"
           VITE_CHICKEN_FIGHT_DONATION: "0x99B4E9Dc0b20E4A8a2D5be4145C38196A80e164B"
           VITE_DAILY_REWARD_CONTRACT: "0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C"
+          VITE_RONIN_DAILY_REWARD_CONTRACT: "0xAF9f4013b569A69Ed43DB368598B37fE08fa3520"
           VITE_CHRISTMAS_EVENT_DONATION: "0xc84F151276b93a9c94B7642c738C9e5c4Cf6a316"
           VITE_BUD_CONTRACT: "0x5b6563e99A8FCafE125b6023D723E8d372e36E96"
           VITE_DEQUIPPER_CONTRACT: "0x1D14762E8A50E031e4Da3125c300a1D7370CBA4f"
