--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "0xsequence": "^1.8.7",
     "@0xsequence/wagmi-connector": "^3.1.1",
     "@anima-protocol/personhood-sdk-react": "^0.4.6",
+    "@aws-amplify/ui-react-liveness": "^3.3.2",
     "@headlessui/react": "^1.7.18",
     "@khmyznikov/pwa-install": "^0.3.3",
     "@metamask/onboarding": "^1.0.1",
@@ -39,6 +40,7 @@
     "@walletconnect/modal": "^2.5.4",
     "@xstate/inspect": "^0.6.2",
     "@xstate/react": "^3.0.1",
+    "aws-amplify": "^6.13.1",
     "bad-words": "^3.0.4",
     "browserify-zlib": "^0.2.0",
     "canvas-confetti": "^1.9.2",
