--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "tailwindcss": "^3.1.8",
     "tailwindscss": "^0.3.0",
     "ts-jest": "^27.1.3",
-    "typescript": "^5.5.2",
+    "typescript": "5.7.2",
     "vite": "^5.4.2",
     "vite-node": "^2.0.3",
     "vite-plugin-html": "^2.1.2",
