--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "set NODE_ENV=development && vite --port 3000 --host",
+    "dev-telegram": "set NODE_ENV=development && vite --port 443 --host",
     "build": "tsc && vite build",
     "lint": "eslint --quiet --ext .tsx,.ts .",
     "format": "yarn lint --fix",
@@ -33,6 +34,7 @@
     "@react-spring/web": "^9.7.2",
     "@sky-mavis/waypoint": "^4.1.0",
     "@tanstack/react-query": "^5.52.1",
+    "@twa-dev/types": "^8.0.2",
     "@use-gesture/react": "^10.2.26",
     "@wagmi/connectors": "^5.1.7",
     "@wagmi/core": "^2.13.4",
@@ -86,6 +88,7 @@
     "util": "^0.12.4",
     "uuid": "^9.0.0",
     "viem": "2.x",
+    "vite-plugin-mkcert": "^1.17.7",
     "vite-plugin-pwa": "^0.17.4",
     "wagmi": "^2.12.7",
     "web3-utils": "^1.6.1",
