[FEAT] Clean up code

--- a/.env.sample
+++ b/.env.sample
@@ -69,8 +69,11 @@ VITE_ANIMATION_URL=https://animations-dev.sunflower-land.com/
 
 VITE_SEQUENCE_ACCESS_KEY=<SEQUENCE_ACCESS_KEY>
 
-FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
+VITE_FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
 
 #VITE_PORTAL_URL=http://localhost:3001
 
 # VITE_PORTAL_APP=portal-example
+
+VITE_ALCHEMY_RPC=<ALCHEMY_RPC>
+VITE_ALCHEMY_KEY=<ALCHEMY_KEY>
