[FEAT] Update YML

--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -82,8 +82,10 @@ jobs:
           VITE_ALGEBRA_QUOTER_CONTRACT: "0xa15F0D7377B2A0C0c10db057f641beD21028FC89"
           VITE_USDC_CONTRACT: "0x2791bca1f2de4661ed88a30c99a7a9449aa84174"
           VITE_FEES_CONTRACT: "0x5a9E3B09f829a5E7Fa1Af9ba112D91C1Cc93683F"
+          VITE_FLOWER_CONTRACT: "???"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
+          VITE_ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
           VITE_POKO_API_KEY: ${{ secrets.POKO_API_KEY }}
           VITE_POKO_DIRECT_CHECKOUT_API_KEY: ${{ secrets.POKO_DIRECT_CHECKOUT_API_KEY }}
           VITE_WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
