--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -85,6 +85,7 @@ jobs:
           VITE_WITHDRAW_SFL_CONTRACT: "0x7667a67eede741141A46ce21717aDCEA40fE7dc0"
           VITE_ALGEBRA_QUOTER_CONTRACT: "0xd11db1Dd39D266D4eAcfaF8dbFCB9B8B691F66AF"
           VITE_USDC_CONTRACT: "0x41e94eb019c0762f9bfcf9fb1e58725bfb0e7582"
+          VITE_FLOWER_CONTRACT: "0xC462c9611871906b8C0152bDa5Ca55E1f439D7e4"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
