--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,7 @@ VITE_MARKETPLACE_VERIFIER_CONTRACT=0x7c6eb150E182B1C2208DCD6C66677c9B22c1D68B
 VITE_WITHDRAW_SFL_CONTRACT=0x7667a67eede741141A46ce21717aDCEA40fE7dc0
 VITE_ALGEBRA_QUOTER_CONTRACT=0xd11db1Dd39D266D4eAcfaF8dbFCB9B8B691F66AF
 VITE_USDC_CONTRACT=0x41e94eb019c0762f9bfcf9fb1e58725bfb0e7582
+VITE_FLOWER_CONTRACT=0xC462c9611871906b8C0152bDa5Ca55E1f439D7e4
 
 VITE_FARM_CONTRACT=0x6E625972Ca5206Ae213650CDc10fba1878540352
 VITE_INVENTORY_CONTRACT=0xAF9f4013b569A69Ed43DB368598B37fE08fa3520
@@ -68,8 +69,11 @@ VITE_ANIMATION_URL=https://animations-dev.sunflower-land.com/
 
 VITE_SEQUENCE_ACCESS_KEY=<SEQUENCE_ACCESS_KEY>
 
-FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
+VITE_FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
 
 #VITE_PORTAL_URL=http://localhost:3001
 
 # VITE_PORTAL_APP=portal-example
+
+VITE_ALCHEMY_RPC=<ALCHEMY_RPC>
+VITE_ALCHEMY_KEY=<ALCHEMY_KEY>
