--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -99,7 +99,7 @@ jobs:
           VITE_ANIMATION_URL: "https://animations-dev.sunflower-land.com"
           VITE_FIREBASE_VAPID_KEY: ${{ secrets.FIREBASE_VAPID_KEY }}
           VITE_TELEGRAM_BOT: "sunflower_land_testnet_bot"
-
+          VITE_TWITTER_CLIENT_ID: ${{ secrets.TWITTER_CLIENT_ID }}
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
