--- a/.env.sample
+++ b/.env.sample
@@ -77,3 +77,7 @@ VITE_FIREBASE_VAPID_KEY=<FIREBASE_VAPID_KEY>
 
 VITE_ALCHEMY_RPC=<ALCHEMY_RPC>
 VITE_ALCHEMY_KEY=<ALCHEMY_KEY>
+
+VITE_TELEGRAM_BOT=<TWITTER_CLIENT_ID>
+
+VITE_TWITTER_CLIENT_ID=<TWITTER_CLIENT_ID>
