Update .env.sample to change VITE_ROOM_URL to a secure WebSocket URL and comment out the local URL. Add a new animation URL for local development.

--- a/.env.sample
+++ b/.env.sample
@@ -28,7 +28,8 @@ VITE_QUEST_CONTRACT=0xB7C85B0A62BF284168Cdb33126Fc987AeD728323
 VITE_DAILY_REWARD_CONTRACT=0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C
 VITE_RONIN_DAILY_REWARD_CONTRACT=0xAF9f4013b569A69Ed43DB368598B37fE08fa3520
 VITE_PRIVATE_IMAGE_URL=https://sunflower-land.com/testnet-assets
-VITE_ROOM_URL=ws://localhost:2567
+# VITE_ROOM_URL=ws://localhost:2567
+VITE_ROOM_URL=wss://mmo-dev.sunflower-land.com
 
 VITE_PAIR_CONTRACT=0x000000000000000000000000000000000000dEaD
 VITE_DISCORD_REDIRECT=http://localhost:3000
@@ -48,7 +49,6 @@ VITE_SEAL_CONTRACT=0x000000000000000000000000000000000000dEaD
 VITE_GREEDY_GOBLIN_DONATION=0x7bC6Fe738E5f4FdCbd034489A0320507BCA9806D
 VITE_CHICKEN_FIGHT_DONATION=0x99B4E9Dc0b20E4A8a2D5be4145C38196A80e164B
 
-
 VITE_BUY_SFL_CONTRACT=0x4196d162B9d4Bd3C31e64284A4E5f58c2cDb90FE
 VITE_QUICKSWAP_ROUTER_CONTRACT=0x000000000000000000000000000000000000dEaD
 VITE_WMATIC_CONTRACT=0x000000000000000000000000000000000000dEaD
@@ -66,6 +66,7 @@ VITE_GAME_ANALYTICS_PUB_KEY=7d9c33d1f9a5aa6d2568742d4219fdf8495ee8c7
 # VITE_PORTAL_APP=crop-boom
 VITE_PORTAL_GAME_URL=https://sunflower-land.com/testnet/
 VITE_ANIMATION_URL=https://animations-dev.sunflower-land.com/
+# VITE_ANIMATION_URL=http://localhost:8080
 
 VITE_SEQUENCE_ACCESS_KEY=<SEQUENCE_ACCESS_KEY>
 
