--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -101,7 +101,7 @@ jobs:
           VITE_ANIMATION_URL: "https://animations.sunflower-land.com"
 
           VITE_FIREBASE_VAPID_KEY: ${{ secrets.FIREBASE_VAPID_KEY }}
-          VITE_TELEGRAM_BOT: "sunflower_land_helper_bot"
+          VITE_TELEGRAM_BOT: "pumpkin_pete_bot"
           VITE_TWITTER_CLIENT_ID: ${{ secrets.TWITTER_CLIENT_ID }}
 
       - name: Configure AWS Credentials
