--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -1,13 +1,12 @@
-name: Testnet deploy
+name: PWA deploy
 
 on:
   push:
     branches:
-      - main
+      - debug/pwa-button
 
 jobs:
   deploy:
-    concurrency: testnet-deploy
     environment: develop
     runs-on: ubuntu-latest
     steps:
@@ -108,10 +107,10 @@ jobs:
           aws-region: ap-southeast-2
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./dist/ s3://sunflower-land.com/testnet --delete
+        run: aws s3 sync ./dist/ s3://sunflower-land.com/pwa --delete
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./dist/ s3://www.sunflower-land.com/testnet --delete
+        run: aws s3 sync ./dist/ s3://www.sunflower-land.com/pwa --delete
 
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@v2
@@ -121,11 +120,3 @@ jobs:
           AWS_REGION: "us-east-1"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-  update_release_draft:
-    runs-on: ubuntu-latest
-    steps:
-      # Drafts your next Release notes as Pull Requests are merged into "master"
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
