--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "react-share": "^5.1.0",
     "react-spring": "^9.7.1",
     "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10",
+    "react-window": "^1.8.11",
     "serialize-error": "^11.0.0",
     "stream-browserify": "^3.0.0",
     "string-similarity": "^4.0.4",
@@ -107,7 +107,7 @@
     "@types/lodash.shuffle": "^4.2.7",
     "@types/pubsub-js": "^1.8.6",
     "@types/qrcode.react": "^1.0.5",
-    "@types/react": "^17.0.33",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-window": "^1.8.8",
@@ -136,6 +136,7 @@
     "tailwindcss": "^3.1.8",
     "tailwindscss": "^0.3.0",
     "ts-jest": "^27.1.3",
+    "types-react-codemod": "^3.5.2",
     "typescript": "5.7.2",
     "vite": "^5.4.2",
     "vite-node": "^2.0.3",
