--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "react-share": "^5.1.0",
     "react-spring": "^9.7.1",
     "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.11",
+    "react-window": "1.8.10",
     "serialize-error": "^11.0.0",
     "stream-browserify": "^3.0.0",
     "string-similarity": "^4.0.4",
@@ -136,7 +136,6 @@
     "tailwindcss": "^3.1.8",
     "tailwindscss": "^0.3.0",
     "ts-jest": "^27.1.3",
-    "types-react-codemod": "^3.5.2",
     "typescript": "5.7.2",
     "vite": "^5.4.2",
     "vite-node": "^2.0.3",
@@ -153,7 +152,9 @@
   "resolutions": {
     "async": "^2.6.4",
     "minimist": "^1.2.6",
-    "simple-get": "^2.8.2"
+    "simple-get": "^2.8.2",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --fix",
