--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -83,6 +83,7 @@ jobs:
           VITE_USDC_CONTRACT: "0x2791bca1f2de4661ed88a30c99a7a9449aa84174"
           VITE_FEES_CONTRACT: "0x5a9E3B09f829a5E7Fa1Af9ba112D91C1Cc93683F"
           VITE_FLOWER_CONTRACT: "???"
+          VITE_WITHDRAW_FLOWER_CONTRACT: "???"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
