--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -86,6 +86,7 @@ jobs:
           VITE_ALGEBRA_QUOTER_CONTRACT: "0xd11db1Dd39D266D4eAcfaF8dbFCB9B8B691F66AF"
           VITE_USDC_CONTRACT: "0x41e94eb019c0762f9bfcf9fb1e58725bfb0e7582"
           VITE_FLOWER_CONTRACT: "0xC462c9611871906b8C0152bDa5Ca55E1f439D7e4"
+          VITE_WITHDRAW_FLOWER_CONTRACT: "0x9dDD15Fd393523F57EDf8937D44705C9044B16c0"
 
           VITE_ALCHEMY_RPC: ${{ secrets.ALCHEMY_RPC }}
           VITE_ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
