[FEAT] Tag players with GitHub Releases Role

--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -125,7 +125,7 @@ jobs:
           color: "2105893"
           username: "Release Changelog"
           avatar_url: "https://cdn.discordapp.com/avatars/487431320314576937/bd64361e4ba6313d561d54e78c9e7171.png"
-          content: "||@Certified Code Contributor ||"
+          content: "<@1374298420117897226>"
           footer_title: "Changelog"
           footer_icon_url: "https://cdn.discordapp.com/avatars/487431320314576937/bd64361e4ba6313d561d54e78c9e7171.png"
           footer_timestamp: true
