[CHORE] Update styling

--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@ VITE_NETWORK=amoy
 # Contracts (Testnet)
 VITE_ACCOUNT_MINTER_CONTRACT=0x891a1910fCf5Fae3e91DECE231806fae720b7743
 VITE_SESSION_CONTRACT=0x91083eE5761D5b0C286AB6bfb1E73E5895EaBe22
-VITE_GAME_CONTRACT=0x05BbC2c442A7468538e68B1F70a97C9140227b0e
+VITE_GAME_CONTRACT=0x6EC7018cA99bd820077D16724AAD72706524B1dF
 VITE_WITHDRAWAL_CONTRACT=0x95FEaC8a82cDaD65BC0187df0628686688b49586
 VITE_DEPOSIT_CONTRACT=0x05c63E157969C8a92e5E4591223705C9134F57b1
 VITE_BUD_DEPOSIT_CONTRACT=0x05c63E157969C8a92e5E4591223705C9134F57b1
@@ -29,7 +29,7 @@ VITE_QUEST_CONTRACT=0xB7C85B0A62BF284168Cdb33126Fc987AeD728323
 VITE_DAILY_REWARD_CONTRACT=0x50CEA29a39fF01E50F2317DFEb51caBDaf46477C
 VITE_RONIN_DAILY_REWARD_CONTRACT=0xAF9f4013b569A69Ed43DB368598B37fE08fa3520
 VITE_PRIVATE_IMAGE_URL=https://sunflower-land.com/testnet-assets
-# VITE_ROOM_URL=ws://localhost:2567
+VITE_ROOM_URL=ws://localhost:2567
 VITE_ROOM_URL=wss://mmo-dev.sunflower-land.com
 
 VITE_PAIR_CONTRACT=0x000000000000000000000000000000000000dEaD
